musl/issues/DER.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'DER' ...
** this is package 'DER' version '1.3'
** package 'DER' successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
make[1]: Entering directory '/var/local/PKGS/CRAN/DER/src'
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c colpafs.cpp -o colpafs.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c colpafs2.cpp -o colpafs2.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c kde.cpp -o kde.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c paf.cpp -o paf.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c paf2.cpp -o paf2.o
g++ -std=gnu++17 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c pafF_helper.cpp -o pafF_helper.o
pafF_helper.cpp: In function 'Rcpp::NumericVector polarization_parallel(Rcpp::NumericVector, Rcpp::NumericVector, int)':
pafF_helper.cpp:90:5: error: 'tbb' has not been declared
   90 |     tbb::global_control gc(tbb::global_control::max_allowed_parallelism, ncores);
      |     ^~~
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:211: pafF_helper.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/CRAN/DER/src'
make[1]: Entering directory '/var/local/PKGS/CRAN/DER/src'
make[1]: Leaving directory '/var/local/PKGS/CRAN/DER/src'
ERROR: compilation failed for package 'DER'
* removing '/home/runner/R-patched/lib/DER'
* restoring previous '/home/runner/R-patched/lib/DER'
